align the clear app button correctly

--- a/src/components/UI/ClearButton.css
+++ b/src/components/UI/ClearButton.css
@@ -5,5 +5,5 @@
   font-size: 1.5em;
   font-weight: bold;
   align-self: flex-end;
-  padding: 0px 5% 20px 0px;
+  padding: 20px 5% 20px 0px;
 }
