--- a/src/components/apps/drum-machine.css
+++ b/src/components/apps/drum-machine.css
@@ -1,8 +1,9 @@
-.App {
+.drum-machine {
   text-align: center;
   background-color: #363636;
-  min-width: 100vw;
+  min-width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
