--- a/src/components/apps/random-quote-app.css
+++ b/src/components/apps/random-quote-app.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 50px 0px 50px 0px;
+  padding: 0px 0px 50px 0px;
 }
 
 .quote-card {
